--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django==3.2.5; python_version >= '3.6'
 glob2==0.7
 image==1.5.33
 numpy==1.21.0
-opencv-python==4.5.3.56
+opencv-python-headless==4.5.3.56
 pillow==8.3.1
 pytz==2021.1
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
