--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,17 @@
 -i https://pypi.org/simple
 argh==0.26.2
 asgiref==3.4.1; python_version >= '3.6'
+cycler==0.10.0
 django==3.2.5; python_version >= '3.6'
 glob2==0.7
 image==1.5.33
+kiwisolver==1.3.1; python_version >= '3.6'
+matplotlib==3.4.2
 numpy==1.21.0
 opencv-python-headless==4.5.3.56
 pillow==8.3.1
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.1; python_version >= '3.5'
